[package]
name = "anewbeginning"
version = "0.1.0"
authors = ["Gil Engel <gil.engel@web.de>"]
edition = "2018"

[dependencies]
#bevy = "0.2.1"
#bevy_prototype_lyon = "0.1.1"
#num = "0.3.0"
#rand = "0.7.3"
#petgraph = "0.5.1"
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }
amethyst_lyon = { path = "../amethyst_lyon" }
lyon = "0.16.2"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
